Add back button

--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
-<html>
+
+
 
 <head>
+  <html>
+  <meta charset="UTF-8">
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      background-color: black
+    }
+
+    .btn {
+      display: inline-block;
+      position: fixed;
+      padding: 1em;
+      background-color: rgba(0, 0, 0, 0.5);
+      bottom: 0;
+      left: 0;
+      color: white;
+      text-decoration: none;
+      font-size: 2rem;
+      cursor: pointer;
+    }
+
+    .player {
+      display: block;
+      width: 100vw;
+      height: 100vh;
+    }
+  </style>
   <title>DFI</title>
+
 </head>
 
-<body style="margin: 0">
-  <iframe style=" display: block; width: 100vw; height: 100vh" src="https://www.youtube.com/embed/CTPMXqZp-4A?rel=0&amp;controls=0&amp;showinfo=0"
+<body>
+  <a href="https://projects.invisionapp.com/share/ADQRETA4U58#/screens" class="btn" href="">Gå tilbage</a>
+  <iframe class="player" src="https://www.youtube.com/embed/CTPMXqZp-4A?rel=0&amp;controls=0&amp;showinfo=0"
     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 
